@@ -1,0 +1,15 @@
+{
+  "name": "isabelle-electron-test",
+  "version": "1.0.0",
+  "description": "Isabelle/Electron Test",
+  "main": "main.js",
+  "scripts": {
+    "start": "electron ."
+  },
+  "author": "Makarius",
+  "license": "BSD3",
+  "devDependencies": {
+      "electron": "^17.1.2",
+      "@electron/fuses": "1.5.0"
+  }
+}
